6.9.1 (17-03-2020)
- Refactor: Integrating migration-classes into ulisboa-specifications

6.9.0 (12-03-2020)
- New feature: Support for Java 11

6.8.1 (10-03-2020)
- Fix: Root aggregators should not use grade scale validators for curriculum aggregator entry
- Fix: Allow improvement evaluations of curriculum aggregator childs
- Fix: ExecutionInterval method overloading dispatching

6.8.0 (10-03-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (Removed deprecated relation between PrecedentDegreeInformation and Registration)

6.7.0 (04-03-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (Removed deprecated relation between PrecedentDegreeInformation and PersonalIngressionData)

6.6.1 (26-02-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core 

6.6.0 (20-02-2020)
- Refactor: Rename GradeScale relations to refer GradeScale entity instead of GradeScaleEnum

6.5.3 (19-02-2020)
- Refactor: Rename enum type GradeScale to GradeScaleEnum
- Refactor: Remove references to GradeScaleEnum values

6.5.2 (12-02-2020)
- Improvement: Add mark that tuition penalty was created by academic debt generation rule instead of academic service request in the Registration details 
- Bug Fix: Check all registrations associated with degree curricular plan, instead of active registrations only

6.5.1 (10-02-2020)
6.5.0 (07-02-2020)
- Refactor: Removed deprecated FirstTimeCandidacy subclass

6.4.4 (06-02-2020)
- Fix: Check if candidacy has active situation

6.4.3 (06-02-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (StudentCandidacy not abstract anymore)

6.4.2 (04-02-2020)
- Improvement: added IDEFE qualitative grades

6.4.1 (29-01-2020)
- Refactor: Replaced semester references by childOrder

6.4.0 (24-12-2019)
- Refactor: Upgraded fenixedu-academic-core and replaced ExecutionSemester references to ExecutionInterval

6.3.1 (29-11-2019)