@@ -1,3 +1,5 @@
+- Refactor: Upgraded dependency of fenixedu-academic-core (PrecedentDegreeInformation split into 'completed' and 'previous')
+
 6.9.1 (17-03-2020)
 - Refactor: Integrating migration-classes into ulisboa-specifications
 
